Bug 513948 - Memo field not updated in Ledger View for multiple edits
Summary: Memo field not updated in Ledger View for multiple edits
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-29 12:24 UTC by Andrew Weighell
Modified: 2025-12-29 17:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Weighell 2025-12-29 12:24:19 UTC
SUMMARY
Multiple transactions can be edited in Ledger view.  For example, updating Category, Payer/Payee.  This works perfectly.  i.e.  All selected transactions are updated.  However, changes to the Memo made at the same time DO NOT update.  It appears the the only way to update the memo field is to edit each individually. (Maybe export to a spreadsheet, edit and reimport but probably excessive when updated a small number of transactions).       
(Applies only to Windows.  Ubuntu 24.03 LTS works perfectly).

STEPS TO REPRODUCE
1. Open account in Ledger view.
2. Shift or Ctrl click to select multiple transactions > rc > edit
3. Enter new value in Memo field > Enter  (Edit values are updated in Payer/Payee, Category field but not in Memo)

OBSERVED RESULT


EXPECTED RESULT

SOFTWARE/OS VERSIONS
Windows:  11 build 22631.6199
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2025-12-29 14:26:10 UTC
Could it be, that you use a prior version on Ubuntu? Asking, because I was able to reproduce the problem on Windows and Linux (and there is no trace in the (common) source of taking care of the memo field in 5.2.x).
Comment 2 Thomas Baumgart 2025-12-29 15:41:10 UTC
Git commit 56baf19e1e70e96d82942f6ce952f350980b7ddd by Thomas Baumgart.
Committed on 29/12/2025 at 15:40.
Pushed by tbaumgart into branch 'master'.

Allow chaning the memo in multiple transactions at once

When multiple transactions are edited, entering text in the memo widget has no effect. This change fixes the problem so that the data is stored. If only spaces are entered, the memo is cleared. In this case the user will be asked if that is what he wants to do.
FIXED-IN: 5.2.2

M  +52   -21   kmymoney/views/multitransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/56baf19e1e70e96d82942f6ce952f350980b7ddd
Comment 3 Andrew Weighell 2025-12-29 16:34:51 UTC
(In reply to Thomas Baumgart from comment #1)
> Could it be, that you use a prior version on Ubuntu? Asking, because I was
> able to reproduce the problem on Windows and Linux (and there is no trace in
> the (common) source of taking care of the memo field in 5.2.x).

Hello Thomas,  You are correct.  I had version 5.1.3 on Ubuntu 24.03 LTS. 
Many thanks for your prompt reply.
Comment 4 Thomas Baumgart 2025-12-29 17:24:08 UTC
Git commit c9efa7a09224c3195cb8bb9a35188f723b630189 by Thomas Baumgart.
Committed on 29/12/2025 at 15:41.
Pushed by tbaumgart into branch '5.2'.

Allow chaning the memo in multiple transactions at once

When multiple transactions are edited, entering text in the memo widget has no effect. This change fixes the problem so that the data is stored. If only spaces are entered, the memo is cleared. In this case the user will be asked if that is what he wants to do.
FIXED-IN: 5.2.2
(cherry picked from commit 56baf19e1e70e96d82942f6ce952f350980b7ddd)

M  +52   -21   kmymoney/views/multitransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/c9efa7a09224c3195cb8bb9a35188f723b630189